CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2002-2021
Various contributors (see below, and AUTHORS.txt)
http://www.tuxpaint.org/

$Id$

2021.August.9 (0.9.27)
  * Documentation updates
    ---------------------
    * Ensured Tux Paint's built-in help ("tuxpaint --help"),
      Unix manual ("man page"), and command-line option
      tab-completion list, and "OPTIONS" documentation all cover
      the full set of Tux Paint options.

    * Reorganized the "Available Options" section of "OPTIONS"
      documentation (to match the organization found in the UI
      of "Tux Paint Config.")

    * Reorganized the options listed in Tux Paint's man page,
      to more closely (but not precisely) match the organization
      noted above.

    * Remove the very outdated Polish translation of Tux Paint's man page.

2021.June.28 (0.9.26)
  * New Features
    ------------
    * Larger UI buttons
      Override the ages-old default 48x48 size for UI buttons
      (via a new "buttonsize" option).  Note: If the button size
      would be too large for the required parts of the UI to appear
      within Tux Paint's window size, the largest possible size will
      be used.
      Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * It's now possible to increase how many rows of buttons are shown
      for the color palette at the bottom of the screen.
      (Use the "colorsrows" option.)
      Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * Adding sub-tools to the Fill tool:
      + Solid -- The classic fill tool; click to fill 
      + Linear -- A linear gradient; click and drag to adjust,
        release mouse to finish
      + Radial -- A radial gradient; click to fill
      (The gradients transition from the current color to the
      background that's being filled.)

  * New Magic Tools:
    ----------------
    * Checkerboard
      Cover the entire canvas with a checkboard pattern using the